[gd_scene load_steps=17 format=3 uid="uid://buuha4e7375vl"]

[ext_resource type="Script" uid="uid://djf6lw2iyp7ww" path="res://Menu/MainMenu.gd" id="1_exbqw"]
[ext_resource type="PackedScene" uid="uid://dtsvp7okoe2s6" path="res://Mould/Mould.tscn" id="2_tma8a"]
[ext_resource type="Shader" uid="uid://p3mvclycg3my" path="res://Card/Card.gdshader" id="3_tpenk"]

[sub_resource type="Gradient" id="Gradient_1xywt"]
offsets = PackedFloat32Array(0, 0.704, 1)
colors = PackedColorArray(0.917647, 0.956863, 0.698039, 0, 0.817717, 0.86, 0.3526, 0.25098, 0.817717, 0.86, 0.3526, 0.25098)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tsfcv"]
noise_type = 3
frequency = 0.0215
fractal_octaves = 4
fractal_lacunarity = 2.5
fractal_gain = 0.4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tpenk"]
width = 316
seamless = true
color_ramp = SubResource("Gradient_1xywt")
noise = SubResource("FastNoiseLite_tsfcv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_exbqw"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tpenk")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_nkib0"]
offsets = PackedFloat32Array(0, 0.704, 1)
colors = PackedColorArray(0.917647, 0.956863, 0.698039, 0, 0.817717, 0.86, 0.3526, 0.25098, 0.817717, 0.86, 0.3526, 0.25098)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_r1n58"]
noise_type = 3
frequency = 0.0215
fractal_octaves = 4
fractal_lacunarity = 2.5
fractal_gain = 0.4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tma8a"]
width = 316
seamless = true
color_ramp = SubResource("Gradient_nkib0")
noise = SubResource("FastNoiseLite_r1n58")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tpenk"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tma8a")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_biqin"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tma8a")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_um3lu"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tma8a")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sfxdn"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tma8a")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u0a2j"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tma8a")
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fgdcb"]
resource_local_to_scene = true
shader = ExtResource("3_tpenk")
shader_parameter/noise = SubResource("NoiseTexture2D_tma8a")
shader_parameter/offset = Vector2(0, 0)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_exbqw")

[node name="MenuButtons" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="MenuTabs" type="TabContainer" parent="MenuButtons"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -96.0
offset_right = 114.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
tabs_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons/MenuTabs"]
layout_mode = 2
alignment = 1
metadata/_tab_index = 0

[node name="Label" type="Label" parent="MenuButtons/MenuTabs/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.870588, 0.701961, 1)
theme_override_font_sizes/font_size = 50
text = "deTrump"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MenuButtons/MenuTabs/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer/Start" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_exbqw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="HowToPlay" type="Button" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "How To Play"

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer/HowToPlay" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_tpenk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="Credits" type="Button" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer/Credits" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_biqin")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuButtons/MenuTabs"]
visible = false
layout_mode = 2
alignment = 1
metadata/_tab_index = 1

[node name="Panel" type="PanelContainer" parent="MenuButtons/MenuTabs/VBoxContainer2"]
layout_mode = 2

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer2/Panel" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_um3lu")
layout_mode = 2
size_flags_vertical = 1

[node name="Label" type="RichTextLabel" parent="MenuButtons/MenuTabs/VBoxContainer2/Panel"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
bbcode_enabled = true
text = "To win the game you need to clear each level without getting game over. To clear the level there will be a condition, usually a minimum number of score or score placement. The main way to get score is to meet or exceed your bid. To meet or exceed your bid you need to win tricks. Each round you play you will make a bid then play a number of tricks equal to the cards dealt to each player.

Each trick you play one card. The suit of the first card played is the lead card and its suit is the lead suit. If you are not leading you must play a card of the lead suit if able. The highest card played of the lead suit wins. e.g. If a [img=14 color=#DC645A]res://Assets/Suits/Diamond.svg[/img]7 is lead then a [img=14 color=#37322D]res://Assets/Suits/Spade.svg[/img]A is played next the [img=14 color=#DC645A]res://Assets/Suits/Diamond.svg[/img]7 will still win due to [img=14 color=#37322D]res://Assets/Suits/Spade.svg[/img]A not being of the lead suit. Each round will usually have a trump suit. The trump suit will always beat the lead suit. This is decided by the card turned up after all cards have been dealt, if [img=14 color=#37322D]res://Assets/Characters/Joker.svg[/img] is turned up there will be no trumps. e.g. If [img=14 color=#37322D]res://Assets/Suits/Spade.svg[/img] is trumps a [img=14 color=#DC645A]res://Assets/Suits/Diamond.svg[/img]7 is lead then a [img=14 color=#37322D]res://Assets/Suits/Spade.svg[/img]A is played next the [img=14 color=#37322D]res://Assets/Suits/Spade.svg[/img]A will win due to being a trump. The [img=14 color=#37322D]res://Assets/Characters/Joker.svg[/img] is called the Best Bower is of the trump suit and will always win. The J of the trump suit is the Right Bower and is the second best card. The J not of the trump suit but of the same colour is the Left Bower and is the third best card. note that the suit of the Left Bower changes to the trump suit.

Each round you place one bid, this is the minimum number of tricks you need to win this round. If you meet your bid you gain that many points. If you fail to meet your bid you lose that many points instead. Each round the sum of the bids of each player must exceed the number of tricks played. The onus to meet the bid total is divided among the remaining players. If you are unsure of the bid to place, a quarter of the number of cards in your hand is decent. The highest bidder draws the turned up card then discards one card to the bonus pile, if multiple players are highest bidder the first in play order among them gets the honour.
The player with the most tricks each round scores an extra 1 for each pip trump, 2 for each face trump and 3 for each bower in the bonus pile. If you have an excellent hand you can try and gain bonus points by discarding a good card to the bonus pile."
fit_content = true
scroll_active = false
horizontal_alignment = 1
justification_flags = 131

[node name="CenterContainer" type="CenterContainer" parent="MenuButtons/MenuTabs/VBoxContainer2"]
layout_mode = 2

[node name="HowToPlayBack" type="Button" parent="MenuButtons/MenuTabs/VBoxContainer2/CenterContainer"]
layout_mode = 2
focus_mode = 0
text = "Back"

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer2/CenterContainer/HowToPlayBack" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_sfxdn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MenuButtons/MenuTabs"]
visible = false
layout_mode = 2
alignment = 1
metadata/_tab_index = 2

[node name="Panel" type="PanelContainer" parent="MenuButtons/MenuTabs/VBoxContainer3"]
layout_mode = 2

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer3/Panel" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_u0a2j")
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="MenuButtons/MenuTabs/VBoxContainer3/Panel"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "Made by CMurtagh-LGTM

\"SCP-x5x (Outer Thoughts)\" Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 4.0 License
http://creativecommons.org/licenses/by/4.0/

Game auio is from https://kenney.nl/assets/casino-audio

You can find the arrow art at https://game-icons.net/1x1/delapouite/plain-arrow.html

Some suit designs are found on Wikimedia 
https://commons.wikimedia.org/wiki/File:Anglo-American_card_suits.svg
https://en.wikipedia.org/wiki/File:RosendeutschschweizerBlatt.svg
https://en.wikipedia.org/wiki/File:Bay_eichel.svg

The font license https://fonts.google.com/specimen/Sofia/license
"
fit_content = true
scroll_active = false
horizontal_alignment = 1
justification_flags = 131
selection_enabled = true

[node name="CenterContainer" type="CenterContainer" parent="MenuButtons/MenuTabs/VBoxContainer3"]
layout_mode = 2

[node name="CreditsBackPressed" type="Button" parent="MenuButtons/MenuTabs/VBoxContainer3/CenterContainer"]
layout_mode = 2
focus_mode = 0
text = "Back"

[node name="Mould" parent="MenuButtons/MenuTabs/VBoxContainer3/CenterContainer/CreditsBackPressed" instance=ExtResource("2_tma8a")]
material = SubResource("ShaderMaterial_fgdcb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MenuButtons/MenuTabs/VBoxContainer/CenterContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MenuButtons/MenuTabs/VBoxContainer2/CenterContainer/HowToPlayBack" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MenuButtons/MenuTabs/VBoxContainer3/CenterContainer/CreditsBackPressed" to="." method="_on_back_pressed"]
